<resources>
    <string name="app_name">NavigationDrawerMaterialDesign</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="inici">"Inici"</string>
    <string name="events">"Events"</string>
    <string name="mail">"Mail"</string>
    <string name="botiga">"Botiga"</string>
    <string name="escola">"Escola"</string>
    <string name="contingut_principal">Ací va el contingut principal de l\'activity!</string>
    <string name="openDrawer">Obrint Drawer</string>
    <string name="closeDrawer">Tancant Drawer</string>

</resources>
